--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:S/U3Z9MS0kWRD+cVpXUWggLCXP9ENgKCHxRbDY7hmLM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
